[project]
name = "lesp"
description = "LESP is a lightweight, efficient spelling proofreader written in Python. It's designed to be easy to use and lightweight, while still providing a decent result when checking for spelling errors. Resource consumption is kept to a minimum, and the program is designed to be as fast as possible."
version = "1.1.0"
readme = "PYPI.md"
authors = [
    { name = "Lyubomir Ternavskiy", email = "ternavski103@gmail.com" }
]
dependencies = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python"
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/LyubomirT/lesp"
Issues = "https://github.com/LyubomirT/lesp/issues"

[tools.flit.metadata]
module="lesp"


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]